# spam-checker-whocalls

./: .env.example  .gitignore  AGENTS.md  Dockerfile  IMPROVEMENTS.md  README.md  api.py  base_phone_checker.py  cache.py  coordinate-finder-script.py  docker-compose.prod.yml  docker-compose.yml  getcontact_phone_checker.py  kaspersky_phone_checker.py  phone_checker_cli.py  pyproject.toml  requirements.txt  truecaller_phone_checker.py
.github/workflows/: ci-cd.yml
app/: main.py
app/api/: models.py  routes.py
app/repositories/: cache_repository.py
app/services/: phone_checker_service.py
app/utils/: constants.py  exceptions.py  phone_utils.py  protocols.py  security.py  validators.py
phone_spam_checker/: __init__.py  api.py  bootstrap.py  cli_base.py  config.py  dependencies.py  device_client.py  device_pool.py  exceptions.py  job_manager.py  logging_config.py  registry.py  utils.py
phone_spam_checker/api/: __init__.py  auth.py  jobs.py  routes.py  schemas.py
phone_spam_checker/domain/: models.py
phone_spam_checker/infrastructure/: __init__.py  getcontact.py  kaspersky.py  tbank.py  truecaller.py
scripts/: getcontact_phone_checker.py  kaspersky_phone_checker.py  phone_checker_cli.py  tbank_phone_checker.py  truecaller_phone_checker.py
src/phone_spam_checker/: cli_base.py  distributed_pool.py  exceptions.py  job_manager.py  registry.py  utils.py  validators.py
tests/: mocks.py  test_api.py  test_base_phone_checker.py  test_cache.py  test_cli.py  test_config.py  test_device_pool.py  test_distributed_pool.py  test_logging.py  test_parallel.py  test_utils.py
tests/integration/: test_phone_checker_service.py
tests/unit/: test_device.py  (+2 more)
(+13 files in other folders)
