[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "phone-spam-checker"
version = "0.1.0"
description = "Service for checking phone numbers via multiple sources"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
packages = [{include = "phone_spam_checker", from = "src"}]
dependencies = [
    "adbutils==2.8.7",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "certifi==2025.4.26",
    "charset-normalizer==3.4.2",
    "click==8.1.8",
    "decorator==5.2.1",
    "deprecation==2.1.0",
    "fastapi==0.115.12",
    "h11==0.16.0",
    "idna==3.10",
    "lxml==5.4.0",
    "packaging==25.0",
    "pillow==11.2.1",
    "py==1.11.0",
    "pydantic==2.11.4",
    "pydantic-settings==2.2.1",
    "pydantic_core==2.33.2",
    "requests==2.32.3",
    "retry==0.9.2",
    "sniffio==1.3.1",
    "starlette==0.46.2",
    "typing-inspection==0.4.0",
    "typing_extensions==4.13.2",
    "uiautomator2==3.2.9",
    "urllib3==2.4.0",
    "uvicorn==0.34.2",
    "httpx==0.27.0",
    "PyJWT==2.8.0",
    "SQLAlchemy==2.0.41",
    "psycopg2-binary==2.9.10",
    "pytest-asyncio==0.23.5",
    "redis==5.0.4"
]

[project.optional-dependencies]
develop = [
    "black==24.4.2",
    "ruff==0.4.3",
    "mypy==1.10.0",
    "pytest==8.2.2",
    "pytest-cov==5.0.0",
    "coverage==7.5.1",
    "pip-audit==2.7.2"
]

[tool.black]
line-length = 100

[tool.ruff]
select = ["E", "F", "B", "I", "N", "D"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term --cov-report=xml"
